--- a/src/fonts/font.scss
+++ b/src/fonts/font.scss
@@ -7,6 +7,13 @@
 
 @font-face {
   font-family: "pt-root-ui";
+  src: url("../fonts/font-files/pt-root-ui_medium.ttf") format("truetype");
+  font-weight: 500;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "pt-root-ui";
   src: url("../fonts/font-files/pt-root-ui_bold.ttf") format("truetype");
   font-weight: 700;
   font-display: swap;
